fix: align nav to center

--- a/pages/pages_style.css
+++ b/pages/pages_style.css
@@ -1,3 +1,7 @@
+nav {
+    text-align: center;
+}
+
 nav p {
     display: inline;
 }
